Html_in_progress

--- a/index.html
+++ b/index.html
@@ -3,14 +3,53 @@
     <head>
         <title>Prime Video- DK edition</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg">
+        <link rel="icon" href="https://res.cloudinary.com/apideck/image/upload/v1604933967/icons/primevideo.png">
     </head>
     <body>
         <nav>
+            <div class="Nav_Flex_container">
+                <div class="prime-logo-nav">
+                    <a href="https://www.primevideo.com/region/eu/storefront/home/ref=atv_hm_hom_c_9zZ8D2_1_0"><img id="nav-bar-actual-prime-logo" src="PrimeVideoLogo_navbar.png" alt="PrimeLogo"></a>
+                </div>
+                <div class="Home_nav">
+                    <a href="https://www.primevideo.com/region/eu/storefront/home/ref=atv_me_RentBuy_c_9zZ8D2_1_1">Home</a>
+                </div>
 
+                <div class="Store_nav">
+                    <a href="https://www.primevideo.com/storefront/ref=atv_hm_hom_c_9zZ8D2_1_2?merchId=RentBuy&ie=UTF8">Store</a>
+                </div>
+                <div class="Channels_nav">
+                    <a href="https://www.primevideo.com/storefront/channels/ref=atv_me_RentBuy_c_9zZ8D2_1_3">Channels</a>
+                </div>
+                <div class="Categories_nav">
+                    <a href="#">Categories</a>
+                </div>
+                <div class="Mystuff_nav">
+                    <a href="https://www.primevideo.com/mystuff/ref=atv_hm_hom_c_9zZ8D2_1_5">My stuff</a>
+                </div>
+            </div>
         </nav>
         <main>
-
+            <div class="main_container">
+                <div class="Titular_images">
+                    <img class="Main_image" src="Images/titular_images/Farzi.webp" alt="Farzi">
+                </div>
+                <h2 class="main_continue_watching">
+                    Continue watching
+                </h2>
+                <div class="Continue_watching_flex">
+                    <div> <img class="Continue_watching_image" src="Images/Continue_watching/SitaRamam.webp" alt="SitaRamam"> </div>
+                    <div> <img class="Continue_watching_image" src="Images/Continue_watching/Virumandi.webp" alt="Virumandi"> </div>
+                    <div> <img class="Continue_watching_image" src="Images/Continue_watching/Meppadiyan.webp" alt="Meppadiyan"></div>
+                    <div> <img class="Continue_watching_image" src="Images/Continue_watching/Vadhandhi.webp" alt="Vadhandhi"></div>
+                    <div><img class="Continue_watching_image" src="Images/Continue_watching/Yashodha.webp" alt="Yashodha"> </div>
+                    
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                </div>
+                </div>
         </main>
     </body>
 </html>
