Added the row of switches in titular image

--- a/index.html
+++ b/index.html
@@ -32,15 +32,27 @@
                 </div>
                 <span class="name_nav">
                         Deepak
-                     
-                </>
+                </span>
             </div>
         </nav>
         <main>
             <div class="main_container">
                 <div class="Titular_images">
-                   
+                    <div class="grid_of_switches">
+                       <ul>
+                        <li id="switch1"></li>
+                        <li id="switch2"></li>
+                        <li id="switch3"></li>
+                        <li id="switch4"></li>
+                        <li id="switch5"></li>
+                        <li id="switch6"></li>
+                        <li id="switch7"></li>
+                        <li id="switch8"></li>
+                        <li id="switch9"></li>
+                       </ul>
+                    </div>
                 </div>
+
                 <h2 id="main_continue_watching">
                     Continue watching
                 </h2>
@@ -49,7 +61,7 @@
                     Recommended Movies
                 </h2>
                 <div class="Recommended_movies_grid">
-                    <div><img class="Recommended_movies_image" src="Images/Recommended_Movies/OKK.webp" alt="OKK" ></div>
+                    <div><a href="https://www.primevideo.com/detail/0H3CJRSLBP9UKLW2MTPQW9DXJR/ref=atv_dp_atf_prime_sd_mv_resume_t1BCAAAAAA0wh0?autoplay=1&t=0"><img class="Recommended_movies_image" src="Images/Recommended_Movies/OKK.webp" alt="OKK" ></a></div>
                     <div><img class="Recommended_movies_image" src="Images/Recommended_Movies/CREED.webp" alt="CREED"></div>
                     <div><img class="Recommended_movies_image" src="Images/Recommended_Movies/F9.webp" alt="F9"></div>
                     <div><img class="Recommended_movies_image" src="Images/Recommended_Movies/JTHJ.webp" alt="JTHJ"> </div>
